# lima-water-access

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  test_pipeline.py
data/: osmconf.ini
data/raw/: censo_agua_lima.xlsx
data/raw/gadm41_PER_shp/: gadm41_PER_0.dbf  gadm41_PER_0.shp  gadm41_PER_0.shx  gadm41_PER_1.dbf  gadm41_PER_1.shp  gadm41_PER_1.shx  gadm41_PER_2.dbf  gadm41_PER_2.shx  gadm41_PER_3.dbf  gadm41_PER_3.shx
notebooks/: analysis.ipynb
outputs/: ivh_table.csv  lima_ivh_lisa.geojson  lima_water.gpkg  map_interactive.html
qgis/: lima_water.qgz
qgis/layouts/: lima_water_print.qpt
scripts/: create_qgis_project.py  diagnose_overpass.py  export_qgis_layers.py  generate_kde_heatmap.py
sql/: 01_indexes.sql  02_spatial_queries.sql
src/lima_water/: __init__.py  census.py  config.py  districts.py  ivh.py  osm.py  postgis.py  spatial.py
