[project]
name = "lima-water-access"
version = "0.1.0"
description = "Spatial analysis of water access vulnerability in Lima Metropolitan Area"
requires-python = ">=3.12,<3.13"
dependencies = [
    "geopandas>=1.0",
    "osmnx>=2.0",
    "shapely>=2.0",
    "folium>=0.17",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "geoalchemy2>=0.15",
    "scikit-learn>=1.5",
    "esda>=2.6",
    "libpysal>=4.12",
    "matplotlib>=3.9",
    "mapclassify>=2.6",
    "jupyterlab>=4.2",
    "unidecode>=1.3",
    "python-dotenv>=1.0",
    "scipy>=1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lima_water"]
